stylesheets/_modules.scss
/* ... */
.module-sticker-manager__preview-modal {
  &__overlay {
    background: $color-black-alpha-40;
    position: fixed;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 5;
  }

  &__container {
    position: relative;
    border-radius: 8px;
    box-shadow: 0 4px 12px 0 $color-black-alpha-20;
    width: 440px;
    height: 360px;
    overflow: hidden;
    display: flex;
    flex-direction: column;

    @include light-theme {
      background: $color-white;
    }
    @include dark-theme {
      background: $color-gray-75;
    }

    &__error {
      color: $color-accent-red;
      display: flex;
      justify-content: center;
      align-items: center;
      text-align: center;
      width: 100%;
      height: 100%;
      padding: 0 80px 30px 80px;

      @include font-body-1-bold;
    }

    &__header {
      display: flex;
      flex-direction: row;
      flex-shrink: 0;
      height: 36px;
      padding: 0 8px 0 16px;
      justify-content: space-between;
      align-items: center;

      &__text {
        @include font-body-1-bold;

        color: $color-gray-90;
        @include dark-theme {
          color: $color-gray-05;
        }
      }

      &__close-button {
        border: none;
        width: 20px;
        height: 20px;
        @include light-theme {
          @include color-svg('../images/icons/v2/x-24.svg', $color-gray-60);
        }
        @include dark-theme {
          @include color-svg('../images/icons/v2/x-24.svg', $color-gray-05);
        }
      }
    }

    &__sticker-grid {
      width: 100%;
      display: grid;
      grid-gap: 8px;
      grid-template-columns: repeat(4, 1fr);
      overflow-y: auto;
      padding: 0 16px;

      &::after {
        content: '';
        display: block;
        height: 80px;
        grid-column: 1 / span 4;
      }

      &__cell {
        width: 96px;
        height: 96px;
        display: flex;
        justify-content: center;
        align-items: center;

        &__image {
          width: 100%;
          height: 100%;
          object-fit: contain;
        }

        &--placeholder {
          border-radius: 4px;

          @include light-theme() {
            background: $color-gray-05;
          }

          @include dark-theme() {
            background: $color-gray-60;
          }
        }
      }
    }

    &__meta-overlay {
      border-radius: 4px;
      width: 408px;
      height: 52px;
      position: absolute;
      left: 16px;
      bottom: 16px;
      padding: 0 12px;
      display: flex;
      flex-direction: row;
      align-items: center;

      @include light-theme {
        background: $color-gray-05;
      }

      @include dark-theme {
        background: $color-gray-60;
      }

      &__info {
        display: flex;
        flex-direction: column;
        justify-content: center;
        flex-grow: 1;

        &__title {
          margin: 0;
          overflow: hidden;
          text-overflow: ellipsis;

          @include font-body-1-bold;

          @include light-theme {
            color: $color-gray-90;
          }

          @include dark-theme {
            color: $color-gray-05;
          }
        }

        &__author {
          margin: 0;
          overflow: hidden;
          white-space: nowrap;
          text-overflow: ellipsis;

          @include light-theme {
            color: $color-gray-45;
          }

          @include dark-theme {
            color: $color-gray-25;
          }
        }

        &__blessed-icon {
          @extend %blessed-sticker-pack-icon;
        }
      }

      &__install {
        flex-shrink: 0;
        overflow: hidden;
      }
    }
  }
}

// Module: Sticker button (launches the sticker picker)

.sticker-button-wrapper {
  height: 36px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 6px;
}

.module-sticker-button__button {
  border: 0;
  background: none;
  width: 32px;
  height: 32px;
  border-radius: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
  opacity: 0.5;

  &:focus,
  &:hover {
    opacity: 1;
  }

  outline: none;

  &::after {
    display: block;
    content: '';
    width: 24px;
    height: 24px;
    flex-shrink: 0;

    @include light-theme {
      @include color-svg(
        '../images/icons/v2/sticker-outline-24.svg',
        $color-gray-60
      );
    }
    @include dark-theme {
      @include color-svg(
        '../images/icons/v2/sticker-solid-24.svg',
        $color-gray-25
      );
    }
  }

  &--active {
    @include light-theme() {
      background: $color-gray-05;
    }

    @include dark-theme() {
      background: $color-gray-75;
    }

    opacity: 1;
  }
}
/* ... */

